# markov-music

./: .gitignore  Cargo.toml  README.md
misc/: config.toml  header.txt
src/: args.rs  choose.rs  config.rs  context.rs  database.rs  error.rs  handle.rs  logging.rs  main.rs  markov.rs  player.rs  selector.rs  socket.rs  song.rs  state.rs  ui.rs  utils.rs
src/database/: mod.rs  models.rs  null.rs  schema.rs  sqlite.rs
src/handle/: cursor.rs  entry.rs  mod.rs  object.rs
src/handle/entry/: entries.rs  iterator.rs  mod.rs  object.rs
src/markov/: chain.rs  handle.rs  iter.rs  mod.rs  node.rs  traits.rs
src/player/: mod.rs  mpv_player.rs  player.rs
src/ui/: chars.rs  color.rs  config.rs  error.rs  input.rs  mod.rs  object.rs  output.rs
